Enhance message template styling and implement smooth scrolling for message container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <button id="button" class="form__btn">➤</button>
     </form>
 
-    <template id="template" class="template">
+    <template id="template">
       <li class="template__msg">
         <span></span>
         <p></p>
